# devices

./: .gitignore  README.md  wq
.github/workflows/: workflow.yml
cyberdog_bluetooth/: CMakeLists.txt  package.xml  plugins.xml  setup.cfg  setup.py
cyberdog_bluetooth/cyberdog_bluetooth/: bluetooth_node.py  bt_core.py  bt_dfu.py  cyberdog_bluetooth_main.py  uwb_tracking.py  yaml_parser.py
cyberdog_bluetooth/include/cyberdog_bluetooth/: bluetooth_base.hpp  bluetooth_plugin.hpp
cyberdog_bluetooth/src/: bluetooth_plugin.cpp
cyberdog_bms/: CMakeLists.txt  package.xml  plugins.xml
cyberdog_bms/include/cyberdog_bms/: bms_base.hpp  bms_plugin.hpp  bms_processor.hpp
cyberdog_bms/scripts/: bms_status_record.py
cyberdog_bms/src/: bms_plugin.cpp  bms_processor.cpp
cyberdog_bms/test/: configuration_toml_test.cpp
cyberdog_led/: CMakeLists.txt  mini_led.toml  package.xml  plugins.xml  tail_led.toml
cyberdog_led/include/cyberdog_led/: led_base.hpp  led_plugin.hpp
cyberdog_led/src/: led_plugin.cpp
cyberdog_photo/: CMakeLists.txt  README.md  package.xml  photo_plugin.xml
cyberdog_photo/include/cyberdog_photo/: photo_base.hpp  photo_plugin.hpp
cyberdog_photo/src/: photo_plugin.cpp
cyberdog_touch/: CMakeLists.txt  package.xml  plugins.xml
cyberdog_touch/include/cyberdog_touch/: touch_base.hpp  touch_input_event_reader.hpp  touch_plugin.hpp  touch_sensor_handler.hpp
cyberdog_touch/src/: cyberdog_touch.cpp  touch_input_event_reader.cpp  touch_plugin.cpp  touch_sensor_handler.cpp
cyberdog_uwb/: CMakeLists.txt  package.xml  plugins.xml
cyberdog_uwb/include/cyberdog_uwb/: AlgoEKF.h  float_comparisons.hpp  rtwtypes.h  tmwtypes.h  uwb_base.hpp  uwb_plugin.hpp
cyberdog_uwb/src/: AlgoEKF.cpp  uwb_plugin.cpp
cyberdog_wifi/: package.xml  setup.cfg  setup.py
cyberdog_wifi/cyberdog_wifi/: cyberdog_wifi.py
device_manager/: CMakeLists.txt  package.xml
device_manager/include/device_manager/: device_config.hpp  device_config.toml  device_handler.hpp  device_manager.hpp  self_check.hpp
device_manager/src/: device_handler.cpp  device_manager.cpp  main.cpp
device_test/: CMakeLists.txt  package.xml
device_test/src/: connector_test.cpp  led_test.cpp
wifi/: package.xml  setup.cfg  setup.py
wifi/wifi/: wifi.py
wifirssi/: package.xml  setup.py
wifirssi/launch/: wifirssi.launch.py
wifirssi/wifirssi/: publisher_wifi_rssi.py
