<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_led</name>
  <version>1.0.0</version>
  <description>led pluginlib plugins</description>
  <maintainer email="liangxiaowei1@xiaomi.com">dukun</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>protocol</depend>
  <depend>cyberdog_embed_protocol</depend>
  <depend>params</depend>
  <depend>ament_index_cpp</depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>cyberdog_system</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>