<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>device_manager</name>
  <version>1.0.0</version>
  <description>device manager</description>
  <maintainer email="dukun1@xiaomi.com">dukun</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend> 
  <depend>std_msgs</depend> 
  <depend>cyberdog_system</depend>
  <depend>cyberdog_common</depend>
  <depend>manager_base</depend>
  <depend>cyberdog_led</depend>
  <depend>cyberdog_bms</depend>
  <depend>cyberdog_touch</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
